src/components/photoGallery/style.css
.photo-gallery {
  display: flex;
  height: 40rem;
  max-width: 80rem;
}

.nav-button {
  height: 100%;
  opacity: 0.65;
  background-color: #000;
  border: none;
  cursor: pointer;
  outline: none;
}

.nav-button:hover {
  opacity: 0.5;
  cursor: pointer;
}

.nav-button:focus {
  outline: 2px solid turquoise;
}

.slider {
  overflow-x: hidden;
  overflow-y: hidden;
  height: 100%;
  display: flex;
  flex-wrap: nowrap;
  -webkit-overflow-scrolling: touch;
}

.image-container {
  display: inline-block;
  height: 40rem;
  width: 80rem;
  background: transparent;
}

img {
  height: 40rem;
  width: 80rem;
  cursor: pointer;
}

